{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 99,
  "lineage": "b01290b7-550f-1a60-0972-a4e1024b44f8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-010142b49310dc38f",
            "arn": "arn:aws:ec2:ap-southeast-3:149051628090:elastic-ip/eipalloc-010142b49310dc38f",
            "association_id": "eipassoc-09d47738f18892691",
            "domain": "vpc",
            "id": "eipalloc-010142b49310dc38f",
            "network_border_group": "ap-southeast-3",
            "network_interface": "eni-0c4f2ba820292eff9",
            "private_dns": "ip-10-0-1-52.ap-southeast-3.compute.internal",
            "private_ip": "10.0.1.52",
            "public_dns": "ec2-15-232-143-68.ap-southeast-3.compute.amazonaws.com",
            "public_ip": "15.232.143.68",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "lks-cc-2026-nat-eip",
              "Project": "lks-cc-2026"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "lks-cc-2026-nat-eip",
              "Project": "lks-cc-2026"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:149051628090:internet-gateway/igw-0866a9598f6e3e5a3",
            "id": "igw-0866a9598f6e3e5a3",
            "owner_id": "149051628090",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "lks-cc-2026-igw",
              "Project": "lks-cc-2026"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "lks-cc-2026-igw",
              "Project": "lks-cc-2026"
            },
            "vpc_id": "vpc-0c60ed9f68e2d98ff"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-010142b49310dc38f",
            "association_id": "eipassoc-09d47738f18892691",
            "connectivity_type": "public",
            "id": "nat-0b3db1db80ecca947",
            "network_interface_id": "eni-0c4f2ba820292eff9",
            "private_ip": "10.0.1.52",
            "public_ip": "15.232.143.68",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0683547f260a0daf1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "lks-cc-2026-nat-gateway",
              "Project": "lks-cc-2026"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "lks-cc-2026-nat-gateway",
              "Project": "lks-cc-2026"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:149051628090:route-table/rtb-0aaddfc5e8e13a9c2",
            "id": "rtb-0aaddfc5e8e13a9c2",
            "owner_id": "149051628090",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b3db1db80ecca947",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "lks-cc-2026-private-app-rt",
              "Project": "lks-cc-2026"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "lks-cc-2026-private-app-rt",
              "Project": "lks-cc-2026"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c60ed9f68e2d98ff"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:149051628090:route-table/rtb-004414a43e69ef5df",
            "id": "rtb-004414a43e69ef5df",
            "owner_id": "149051628090",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b3db1db80ecca947",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "lks-cc-2026-private-db-rt",
              "Project": "lks-cc-2026"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "lks-cc-2026-private-db-rt",
              "Project": "lks-cc-2026"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c60ed9f68e2d98ff"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:149051628090:route-table/rtb-09efa2e6a11b9bd56",
            "id": "rtb-09efa2e6a11b9bd56",
            "owner_id": "149051628090",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0866a9598f6e3e5a3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "lks-cc-2026-public-rt",
              "Project": "lks-cc-2026"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "lks-cc-2026-public-rt",
              "Project": "lks-cc-2026"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c60ed9f68e2d98ff"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cbd6413f1fb2f307",
            "route_table_id": "rtb-0aaddfc5e8e13a9c2",
            "subnet_id": "subnet-04af6ddc0dfd7a865"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private_app",
            "aws_subnet.private_app",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f7ca75357acbc3a",
            "route_table_id": "rtb-0aaddfc5e8e13a9c2",
            "subnet_id": "subnet-05296f93552cfe779"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private_app",
            "aws_subnet.private_app",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed2433158ea64f6c",
            "route_table_id": "rtb-004414a43e69ef5df",
            "subnet_id": "subnet-0fcf29c8fb9ce501d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private_db",
            "aws_subnet.private_db",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072fc227e2c983fae",
            "route_table_id": "rtb-004414a43e69ef5df",
            "subnet_id": "subnet-0313be4abe212c863"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private_db",
            "aws_subnet.private_db",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037f55d687d839403",
            "route_table_id": "rtb-09efa2e6a11b9bd56",
            "subnet_id": "subnet-0683547f260a0daf1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6fc4b5c7f793699",
            "route_table_id": "rtb-09efa2e6a11b9bd56",
            "subnet_id": "subnet-061533162273bfc4f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:149051628090:security-group/sg-0e781f0d8806b1500",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e781f0d8806b1500",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "lks-cc-2026-alb-sg",
            "name_prefix": "",
            "owner_id": "149051628090",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "lks-cc-2026-alb-sg",
              "Project": "lks-cc-2026"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "lks-cc-2026-alb-sg",
              "Project": "lks-cc-2026"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c60ed9f68e2d98ff"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:149051628090:security-group/sg-042ba23ce10311a0d",
            "description": "Security group for application servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-042ba23ce10311a0d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere (restrict in production)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e781f0d8806b1500"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "HTTPS from ALB",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e781f0d8806b1500"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "lks-cc-2026-app-sg",
            "name_prefix": "",
            "owner_id": "149051628090",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "lks-cc-2026-app-sg",
              "Project": "lks-cc-2026"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "lks-cc-2026-app-sg",
              "Project": "lks-cc-2026"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c60ed9f68e2d98ff"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:149051628090:security-group/sg-0806f2912867d3d4d",
            "description": "Security group for ElastiCache Redis",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0806f2912867d3d4d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Redis from app servers",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-042ba23ce10311a0d"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "lks-cc-2026-elasticache-sg",
            "name_prefix": "",
            "owner_id": "149051628090",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "lks-cc-2026-elasticache-sg",
              "Project": "lks-cc-2026"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "lks-cc-2026-elasticache-sg",
              "Project": "lks-cc-2026"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c60ed9f68e2d98ff"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.app",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:149051628090:security-group/sg-0ac5656b3c146509b",
            "description": "Security group for RDS database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ac5656b3c146509b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL/PostgreSQL from app servers",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-042ba23ce10311a0d"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "lks-cc-2026-rds-sg",
            "name_prefix": "",
            "owner_id": "149051628090",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "lks-cc-2026-rds-sg",
              "Project": "lks-cc-2026"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "lks-cc-2026-rds-sg",
              "Project": "lks-cc-2026"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c60ed9f68e2d98ff"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.app",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:149051628090:subnet/subnet-04af6ddc0dfd7a865",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-3a",
            "availability_zone_id": "apse3-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04af6ddc0dfd7a865",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "149051628090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "lks-cc-2026-private-app-subnet-1",
              "Project": "lks-cc-2026",
              "Tier": "Private-App"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "lks-cc-2026-private-app-subnet-1",
              "Project": "lks-cc-2026",
              "Tier": "Private-App"
            },
            "vpc_id": "vpc-0c60ed9f68e2d98ff"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:149051628090:subnet/subnet-05296f93552cfe779",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-3b",
            "availability_zone_id": "apse3-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05296f93552cfe779",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "149051628090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "lks-cc-2026-private-app-subnet-2",
              "Project": "lks-cc-2026",
              "Tier": "Private-App"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "lks-cc-2026-private-app-subnet-2",
              "Project": "lks-cc-2026",
              "Tier": "Private-App"
            },
            "vpc_id": "vpc-0c60ed9f68e2d98ff"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:149051628090:subnet/subnet-0fcf29c8fb9ce501d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-3a",
            "availability_zone_id": "apse3-az1",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fcf29c8fb9ce501d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "149051628090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "lks-cc-2026-private-db-subnet-1",
              "Project": "lks-cc-2026",
              "Tier": "Private-DB"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "lks-cc-2026-private-db-subnet-1",
              "Project": "lks-cc-2026",
              "Tier": "Private-DB"
            },
            "vpc_id": "vpc-0c60ed9f68e2d98ff"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:149051628090:subnet/subnet-0313be4abe212c863",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-3b",
            "availability_zone_id": "apse3-az2",
            "cidr_block": "10.0.40.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0313be4abe212c863",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "149051628090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "lks-cc-2026-private-db-subnet-2",
              "Project": "lks-cc-2026",
              "Tier": "Private-DB"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "lks-cc-2026-private-db-subnet-2",
              "Project": "lks-cc-2026",
              "Tier": "Private-DB"
            },
            "vpc_id": "vpc-0c60ed9f68e2d98ff"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:149051628090:subnet/subnet-0683547f260a0daf1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-3a",
            "availability_zone_id": "apse3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0683547f260a0daf1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "149051628090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "lks-cc-2026-public-subnet-1",
              "Project": "lks-cc-2026",
              "Tier": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "lks-cc-2026-public-subnet-1",
              "Project": "lks-cc-2026",
              "Tier": "Public"
            },
            "vpc_id": "vpc-0c60ed9f68e2d98ff"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:149051628090:subnet/subnet-061533162273bfc4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-3b",
            "availability_zone_id": "apse3-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-061533162273bfc4f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "149051628090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "lks-cc-2026-public-subnet-2",
              "Project": "lks-cc-2026",
              "Tier": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "lks-cc-2026-public-subnet-2",
              "Project": "lks-cc-2026",
              "Tier": "Public"
            },
            "vpc_id": "vpc-0c60ed9f68e2d98ff"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:149051628090:vpc/vpc-0c60ed9f68e2d98ff",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cdfe3283810a6745",
            "default_route_table_id": "rtb-074d9958440fa19d1",
            "default_security_group_id": "sg-07e47c172278e63f1",
            "dhcp_options_id": "dopt-08dc33b2b00df71f5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c60ed9f68e2d98ff",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-074d9958440fa19d1",
            "owner_id": "149051628090",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "lks-cc-2026-vpc",
              "Project": "lks-cc-2026"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "lks-cc-2026-vpc",
              "Project": "lks-cc-2026"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}